Correção do retorno da busca por todos os tecnicos.